fix header menu scroll on mobile small screen

--- a/app/assets/sass/_modules/_general.scss
+++ b/app/assets/sass/_modules/_general.scss
@@ -1,3 +1,10 @@
+body {
+  &.locked {
+    height: 100vh;
+    overflow: hidden;
+  }
+}
+
 .main {
   position: relative;
   z-index: 999;
